--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -63,12 +63,17 @@
                     </div>
                 </div>
             </header>
-            <div class="page-title sp" style="background-image: url({{ backgroundImage }})">
-                <div class="container text-center">
-                    <h2>{{ title }}</h2>
-                    <p>{{ description }}</p>
-                </div>
-            </div>
+
+            {% block pageHeader %}
+                {% if title %}
+                    <div class="page-title sp" style="background-image: url({{ backgroundImage }})">
+                        <div class="container text-center">
+                            <h2>{{ title }}</h2>
+                            <p>{{ description }}</p>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endblock pageHeader %}
 
             {{  content | safe }}
 
