--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -35,9 +35,9 @@
                         <div class="col-6 col-sm-9 nav-column clearfix">
                             <div class="right-nav">
                                 <div class="header-social">
-                                    <a href="#" class="fa fa-facebook"></a>
-                                    <a href="#" class="fa fa-twitter"></a>
-                                    <a href="#" class="fa fa-github"></a>
+                                    <a href="{{ settings.facebook }}" class="fa fa-facebook"></a>
+                                    <a href="{{ settings.twitter }}" class="fa fa-twitter"></a>
+                                    <a href="{{ settings.github }}" class="fa fa-github"></a>
                                 </div>
                             </div>
                             <nav id="menu" class="d-none d-lg-block">
@@ -168,8 +168,9 @@
                             <div class="col-md-6 col-lg-3 footer_widget">
                                 <div class="inner">
                                     <h4>Address</h4>
-                                    <h5>Flat Pro, Inc.</h5>
-                                    <p>649 Folsom Ave, Suite 400 <br>San Francisco, CA 63105 <br>P: (123) 456-7890</p>
+                                    <h5>Flat Pro Inc.</h5>
+                                    <p>{{ settings.address }}
+                                        <br>P: {{settings.phone}}</p>
                                     <h4>Newsletter</h4>
                                     <form action="#" class="nw_form">
                                         <input placeholder="Enter your email" type="email">
